// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolTable renders data filled state 1`] = `
<DocumentFragment>
  .c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c10 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c23 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c27 {
  height: 16px;
  width: 16px;
}

.c27 path {
  stroke: #FC72FF;
  background: #7D7D7D;
  fill: none;
}

.c28 {
  -webkit-animation: 2s fvtopB linear infinite;
  animation: 2s fvtopB linear infinite;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  max-width: 1200px;
  max-height: px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px auto 24px auto;
}

.c3 {
  width: 100%;
  height: 72px;
  position: relative;
  top: 73px;
  position: -webkit-sticky;
  position: sticky;
  position: -webkit-sticky;
  z-index: 990;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background: #FFFFFF;
}

.c16 {
  width: 100%;
  position: relative;
  overflow-x: auto;
  overscroll-behavior-x: none;
  border-right: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c16::-webkit-scrollbar {
  display: none;
}

.c25 {
  position: -webkit-sticky;
  position: sticky;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: -48px;
  visibility: hidden;
}

.c26 {
  background: #FFEFFF;
  border-radius: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 8px;
  color: #FC72FF;
  font-size: 16px;
  font-weight: 535;
  gap: 8px;
  height: 34px;
  z-index: 990;
}

.c6 {
  padding: 0px 12px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 64px;
}

.c18:hover {
  background: #22222212;
}

.c7 {
  border: 1px solid #22222212;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  overflow: auto;
  width: unset;
  min-height: 52px;
  background: #F9F9F9;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  overscroll-behavior: none;
}

.c7::-webkit-scrollbar {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8:last-child {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c17 {
  color: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c13 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  width: 100%;
  gap: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c13:hover {
  opacity: 0.6;
}

.c13:active {
  opacity: 0.4;
}

.c14 {
  height: 16px;
  width: 16px;
  color: #7D7D7D;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c9 {
  min-width: 44px;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c11 {
  min-width: 240px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c12 {
  min-width: 120px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c15 {
  min-width: 84px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c20 {
  position: relative;
  top: 0;
  left: 0;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c21 img {
  width: 14px;
  height: 28px;
  object-fit: cover;
}

.c21 img:first-child {
  border-radius: 14px 0 0 14px;
  object-position: 0 0;
}

.c21 img:last-child {
  border-radius: 0 14px 14px 0;
  object-position: 100% 0;
}

.c22 {
  width: 14px;
  height: 28px;
  border-radius: 50%;
}

.c0 {
  margin: 0 auto;
  max-width: 1200px;
}

.c24 {
  padding: 2px 6px;
  background: #F9F9F9;
}

<div
    class="c0"
    data-testid="top-pools-explore-table"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4 c5 c6 c7"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c10 css-1urox24"
                >
                  #
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c10 css-1urox24"
                >
                  Pool
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c4 c5 c13"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    Transactions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c4 c5 c13"
                >
                  <svg
                    class="c14"
                    direction="desc"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                    <polyline
                      points="19 12 12 19 5 12"
                    />
                  </svg>
                  <div
                    class="c10 css-1urox24"
                  >
                    TVL
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c10 css-1urox24"
                >
                  1 day volume
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c10 css-1urox24"
                >
                  7 day volume
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c10 css-1urox24"
                >
                  Turnover
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c1 c16"
        >
          <a
            class="c17"
            href="/explore/pools/ethereum/0x123"
          >
            <div
              class="c4 c5 c6 c18"
            >
              <div
                class="c8"
              >
                <div
                  class="c9"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    1
                  </div>
                </div>
              </div>
              <div
                class="c8"
              >
                <div
                  class="c11"
                >
                  <div
                    class="c4 c19"
                  >
                    <div
                      class="c20"
                    >
                      <div
                        class="c21"
                        size="28"
                      >
                        <img
                          class="c22"
                          size="28"
                          src="blank_token.svg"
                        />
                        <img
                          class="c22"
                          size="28"
                          src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                        />
                      </div>
                    </div>
                    <div
                      class="c23 css-1urox24"
                    >
                      USDC/WETH
                    </div>
                    <div
                      class="c10 c24 css-1m65e73"
                    >
                      1%
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c8"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    200
                  </div>
                </div>
              </div>
              <div
                class="c8"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    $300.00
                  </div>
                </div>
              </div>
              <div
                class="c8"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    $400.00
                  </div>
                </div>
              </div>
              <div
                class="c8"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    $500.00
                  </div>
                </div>
              </div>
              <div
                class="c8"
              >
                <div
                  class="c15"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    600.00
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
        <div
          class="c4 c5 c25"
        >
          <div
            class="c4 c5 c26"
          >
            <svg
              class="c27 c28"
              fill="none"
              stroke="#FC72FF"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 a10,10 0 0,1 10,-10 M12,22 a10,10 0 0,1 -10,-10 M22,12 a10,10 0 0,1 -10,10"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
              />
            </svg>
            Loading
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PoolTable renders error state 1`] = `
<DocumentFragment>
  .c1 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c0 {
  margin: 0 auto;
  max-width: 1200px;
}

<div
    class="c0"
  >
    <div
      class="c1 css-1urox24"
    >
      Error loading Top Pools
    </div>
  </div>
</DocumentFragment>
`;

exports[`PoolTable renders loading state 1`] = `
<DocumentFragment>
  .c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c22 {
  height: 16px;
  width: 16px;
}

.c22 path {
  stroke: #FC72FF;
  background: #7D7D7D;
  fill: none;
}

.c23 {
  -webkit-animation: 2s fvtopB linear infinite;
  animation: 2s fvtopB linear infinite;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  max-width: 1200px;
  max-height: px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px auto 24px auto;
}

.c3 {
  width: 100%;
  height: 72px;
  position: relative;
  top: 73px;
  position: -webkit-sticky;
  position: sticky;
  position: -webkit-sticky;
  z-index: 990;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background: #FFFFFF;
}

.c16 {
  width: 100%;
  position: relative;
  overflow-x: auto;
  overscroll-behavior-x: none;
  border-right: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c16::-webkit-scrollbar {
  display: none;
}

.c20 {
  position: -webkit-sticky;
  position: sticky;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: -48px;
  visibility: hidden;
}

.c21 {
  background: #FFEFFF;
  border-radius: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 8px;
  color: #FC72FF;
  font-size: 16px;
  font-weight: 535;
  gap: 8px;
  height: 34px;
  z-index: 990;
}

.c6 {
  padding: 0px 12px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 64px;
}

.c17:hover {
  background: #22222212;
}

.c7 {
  border: 1px solid #22222212;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  overflow: auto;
  width: unset;
  min-height: 52px;
  background: #F9F9F9;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  overscroll-behavior: none;
}

.c7::-webkit-scrollbar {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8:last-child {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c13 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  width: 100%;
  gap: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c13:hover {
  opacity: 0.6;
}

.c13:active {
  opacity: 0.4;
}

.c14 {
  height: 16px;
  width: 16px;
  color: #7D7D7D;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c18 {
  border-radius: 12px;
  border-radius: 12px;
  height: 24px;
  width: 50%;
  width: 50%;
  -webkit-animation: fAQEyV 1.5s infinite;
  animation: fAQEyV 1.5s infinite;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  background: linear-gradient( to left, #22222212 25%, rgba(53,53,53,0.07) 50%, #22222212 75% );
  will-change: background-position;
  background-size: 400%;
}

.c9 {
  min-width: 44px;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c11 {
  min-width: 240px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c12 {
  min-width: 120px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c15 {
  min-width: 84px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  padding: 12px 8px;
}

.c19 {
  width: 75%;
  height: 16px;
}

.c0 {
  margin: 0 auto;
  max-width: 1200px;
}

<div
    class="c0"
    data-testid="top-pools-explore-table"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4 c5 c6 c7"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c10 css-1urox24"
                >
                  #
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c10 css-1urox24"
                >
                  Pool
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c4 c5 c13"
                >
                  <div
                    class="c10 css-1urox24"
                  >
                    Transactions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c4 c5 c13"
                >
                  <svg
                    class="c14"
                    direction="desc"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                    <polyline
                      points="19 12 12 19 5 12"
                    />
                  </svg>
                  <div
                    class="c10 css-1urox24"
                  >
                    TVL
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c10 css-1urox24"
                >
                  1 day volume
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c10 css-1urox24"
                >
                  7 day volume
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c10 css-1urox24"
                >
                  Turnover
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c1 c16"
        >
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
          <div
            class="c4 c5 c6 c17"
          >
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c11"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c12"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c15"
              >
                <div
                  class="c18 c19"
                  data-testid="cell-loading-bubble"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="c4 c5 c20"
        >
          <div
            class="c4 c5 c21"
          >
            <svg
              class="c22 c23"
              fill="none"
              stroke="#FC72FF"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 a10,10 0 0,1 10,-10 M12,22 a10,10 0 0,1 -10,-10 M22,12 a10,10 0 0,1 -10,10"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
              />
            </svg>
            Loading
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
